久しぶりの開発を行う。今から余計なコードを削除する。(使われていない関数など) 現時点では正常に動いている。

--- a/Achievement/Base.lproj/Main.storyboard
+++ b/Achievement/Base.lproj/Main.storyboard
@@ -1741,6 +1741,6 @@
         <image name="織田信長" width="128" height="128"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="cOa-a0-mAE"/>
+        <segue reference="zlV-nB-Apk"/>
     </inferredMetricsTieBreakers>
 </document>
